@@ -1,3 +1,7 @@
+2003-09-12  Pavel Roskin  <proski@gnu.org>
+
+	* chmod.c (chmod_callback): Fix uninitialized variable.
+
 2003-09-11  Pavel Roskin  <proski@gnu.org>
 
 	* main.c (midnight_callback): Don't redraw dirty panels if the
